--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1363,6 +1363,11 @@ body {
   height: auto;
   min-height: 100vh;
 }
+.cid-qIirMkYwKy {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
+}
 .cid-qIhOMWLwCd {
   padding-top: 90px;
   padding-bottom: 90px;
