--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1388,3 +1388,12 @@ body {
   font-size: 72px;
   color: #707070;
 }
+.cid-qIoeWvun6q {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qIoeWvun6q .mbr-text,
+.cid-qIoeWvun6q blockquote {
+  color: #767676;
+}
