--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1368,12 +1368,24 @@ body {
   padding-bottom: 90px;
   background-image: url("../../../assets/images/mbr-1912x1080.jpg");
 }
-.cid-qK7KOst0Xk {
-  background: linear-gradient(45deg, #fbac7f, #e5658a);
+.cid-qKdv1hkbgp {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background3.jpg");
 }
-.cid-qK7KOst0Xk .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
+.cid-qKdv1hkbgp .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qKdv1hkbgp .mbr-figure img {
+  height: 100%;
+}
+@media (max-width: 991px) {
+  .cid-qKdv1hkbgp .mbr-figure img {
+    width: 100% !important;
+  }
 }
 .cid-qIoeWvun6q {
   padding-top: 60px;
