--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1363,54 +1363,10 @@ body {
   height: auto;
   min-height: 100vh;
 }
-.cid-qIirMkYwKy {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1912x1080.jpg");
-}
-.cid-qKdv1hkbgp {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background3.jpg");
-}
-.cid-qKdv1hkbgp .mbr-figure {
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.cid-qKdv1hkbgp .mbr-figure img {
-  height: 100%;
-}
-@media (max-width: 991px) {
-  .cid-qKdv1hkbgp .mbr-figure img {
-    width: 100% !important;
-  }
-}
-.cid-qKxRN7NtQ8 {
-  background-image: url("../../../assets/images/background1.jpg");
-}
-.cid-qKxRN7NtQ8 h1 {
-  color: #616161;
-}
-.cid-qKxRN7NtQ8 h2,
-.cid-qKxRN7NtQ8 h3,
-.cid-qKxRN7NtQ8 p {
-  color: #767676;
-}
-.cid-qKxRN7NtQ8 .mbr-section-subtitle {
-  font-style: italic;
-}
-#custom-html-d {
+#custom-html-f {
   /* Type valid CSS here */
 }
-#custom-html-d .my-image {
-  width: 100%;
-}
-#custom-html-e {
-  /* Type valid CSS here */
-}
-#custom-html-e .my-image {
+#custom-html-f .my-image {
   width: 100%;
 }
 .cid-qIoeWvun6q {
