create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1750,42 +1750,13 @@ body {
 }
 .cid-qKVk1Ex0Ck .nav-link:hover,
 .cid-qKVk1Ex0Ck .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #0f7699 !important;
 }
 #custom-html-f {
   /* Type valid CSS here */
 }
 #custom-html-f .my-image {
   width: 100%;
-}
-.cid-qIoeWvun6q {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-qIoeWvun6q .mbr-text,
-.cid-qIoeWvun6q blockquote {
-  color: #767676;
-}
-.cid-qK7nxwO6AG {
-  background-image: url("../../../assets/images/background1.jpg");
-}
-.cid-qK7nxwO6AG h1 {
-  color: #616161;
-}
-.cid-qK7nxwO6AG h2,
-.cid-qK7nxwO6AG h3,
-.cid-qK7nxwO6AG p {
-  color: #767676;
-}
-.cid-qK7nxwO6AG .mbr-section-subtitle {
-  font-style: italic;
-}
-.cid-qK7nS7PzZs {
-  background-image: url("../../../assets/images/background2.jpg");
-}
-.cid-qK7nS7PzZs .mbr-section-subtitle {
-  letter-spacing: .2rem;
 }
 .cid-qKVp34tE6K .navbar {
   padding: .5rem 0;
@@ -2174,7 +2145,7 @@ body {
 }
 .cid-qKVp34tE6K .nav-link:hover,
 .cid-qKVp34tE6K .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #0f7699 !important;
 }
 #custom-html-g {
   /* Type valid CSS here */
